CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT(libdylib)

IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
   MESSAGE(FATAL_ERROR "In-source builds are not allowed.")
ENDIF()

SET_SOURCE_FILES_PROPERTIES(libdylib.h PROPERTIES HEADER_FILE_ONLY TRUE)
ADD_LIBRARY(libdylib STATIC libdylib.c libdylib.h)
SET_TARGET_PROPERTIES(libdylib PROPERTIES PREFIX "")

OPTION(BUILD_TESTS BOOL OFF)
IF(BUILD_TESTS)
    INCLUDE_DIRECTORIES(.)
    ADD_EXECUTABLE(runtests tests/exe.c)
    TARGET_LINK_LIBRARIES(runtests libdylib)
    ADD_LIBRARY(testlib SHARED tests/lib.c)
    # For consistency, use "testlib.dylib"
    SET_TARGET_PROPERTIES(testlib PROPERTIES PREFIX "" SUFFIX ".dylib")
ENDIF(BUILD_TESTS)
